--- a/style.css
+++ b/style.css
@@ -209,3 +209,96 @@ ul li, h1, p{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+
+
+/* chi siamo */
+
+.circle{
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    border: 3px solid var(--red);
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.opener{
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    border: 2px solid var(--red);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    z-index: 3;
+    background-color: var(--gold);
+    cursor: pointer;
+    transition: 0.5s;
+    
+}
+
+.moved{
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    border: 3px solid var(--red);
+    background-position: center;
+    background-size: 100%;
+    position: absolute;
+    z-index: 2;
+    transition: 0.5s;
+    cursor: pointer;
+    background-color: rgb(255, 221, 0);
+}
+
+.vh-75{
+    height: 75vh;
+}
+
+.flip-card{
+    height: 400px;
+    width: 250px;
+}
+
+.flip-card:hover > .inner{
+    transform: rotateY(180deg);
+}
+
+.inner{
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(red, rgb(255, 238, 0), rgb(85, 1, 203));
+    border: 2px solid var(--red);
+    border-radius: 20px;
+    position: relative;
+    transition: 0.5s;
+    transform-style: preserve-3d;
+    
+}
+
+.inner-face{
+    height: 400px;
+    width: 250px;
+
+    
+ 
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.inner-back{
+    height: 400px;
+    width: 250px;
+    position: absolute;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
+    text-align: center;
+    padding: 15px;
+}
